=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk
-----------------------------------------------------------------------
2016-05-01                                                    trunk-497
Added LDA+U citation of the implementation paper

modified:
  Src/ldau_specs.f
  Src/m_cite.F90

-----------------------------------------------------------------------
2016-04-29                                                    trunk-495
Fixed rmaxh for correct range of Hamiltonian elements

- The rmaxh was too short in case of LDAU projectors
  bigger than the KB projectors.

  This fixes the calculation of the correct rmaxh
  when the LDAU projectors are used.

modified:
  Src/atomlist.f
  Src/siesta_init.F

-----------------------------------------------------------------------
2016-04-29                                                    trunk-494
Cleaned LDA+U

- Moved H_ldau to sparse_matrices.
  This makes the global memory of "standard" matrix
  elements common in the common module.
  This requires that it is passed on every call to
  Hubbard_term.
  
- Moved several saved variables in the hubbard_term
  to the module level.
  This makes it easier to distinguish global variables.

- Removed all commented out debugging statements.

- Improved the logic of the options in the LDA+U implementation

  REMARK: The logic is exactly the same but clearer from the
          input options point of view.

  1. ldau_init is now forced to .true. if ldau_shift is true.
  2. There is no need to store the current geometry setup
     Now the H_ldau is reset when state_init is called.

- Removed a print-out of:

  "Adding Hamiltonian contribution."

  This is implicit in each SCF cycle (from after the
  initial occupations have been calculated).

  I have tested this on an MD run as well.

modified:
  Src/Makefile